# nicotine-plus

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install_data.py  nicotine  pyproject.toml
.github/workflows/: pythonapp.yml
debian/: control
debian/tests/: control
docker/: Dockerfile.python3
src/pynicotine/: slskmessages.py
src/pynicotine/gtkgui/: about.py  userbrowse.py  utils.py
test/integration/: nicotine.robot  nicotine_library.py  run_with_wm.sh
tests/: mock_socket.py  test_login.py
tests/integration/: filechooser-stress-test.py  run_app.py  run_test.sh
tools/docker/: Dockerfile.dep-8
