
[tool.poetry]
name = "nicotine"
version = "1.5.0"
description = "Nicotine+, a client for the SoulSeek filesharing network."
authors = ["Michael Labouebe <gfarmerfr@free.fr>"]
license = "GPLv3"
homepage = "https://www.nicotine-plus.org/"
packages = [
    {from = "src", include = "pynicotine"},
    {from = "src", include = "pynicotine_plugins"}
]
include = ["doc"]

[tool.poetry.scripts]
nicotine = "pynicotine.nicotine:run"

[tool.poetry.dependencies]
python = "^3.6"
geoip = {version = "^1.3.2", markers = "sys_platform != 'darwin'"}
miniupnpc = "^2.0.2"
mutagen = "^1.44.0"
pgi = "^0.0.11"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
PyGObject-stubs = "^0.0.2"
isort = { version = "^4.3.21", extras = ["pyproject"] }
docutils-stubs = "^0.0.21"
pytest = "^5.4.1"

[tool.isort]
force_single_line = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"